# sphinx-asdf

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG_weldx.md  CONTRIBUTING.md  README.rst  bandit.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: sphinx_asdf_ci.yml
sphinx-asdf/: asdf.py  md2rst.py
sphinx_asdf/: __init__.py  asdf2rst.py  conf.py  connections.py  directives.py  md2rst.py  nodes.py  weldx_tools.py
sphinx_asdf/static/: sphinx_asdf.css
sphinx_asdf/templates/: schema.html
tests/: conftest.py  coveragerc  test_sphinx_asdf.py
tests/roots/test-basic-generation/: conf.py
tests/roots/test-global-config/: conf.py
tests/roots/test-global-prefix/: conf.py
tests/roots/test-global-prefix/schemas/a/b/c/: bar.yaml
tests/roots/test-global-prefix/schemas/a/b/c/core/: baz.yaml
tests/test-global-prefix/: contents.rst
tests/test-global-prefix/schemas/a/b/c/: foo.yaml
