[project]
name = 'sphinx-asdf'
description = 'Sphinx plugin for generating documentation from ASDF schemas'
readme = 'README.rst'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
dependencies = [
    'asdf',
    'astropy >=5.0.4',
    'docutils',
    'graphviz',
    'matplotlib',
    'myst-parser',
    'mistune ~=0.8.4',
    'sphinx',
    'sphinx-astropy',
    'sphinx_bootstrap_theme',
    'sphinx-rtd-theme',
    'sphinx-inline-tabs'
]
dynamic = ['version']

[project.optional-dependencies]
tests = [
    'pytest',
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/sphinx-asdf/issues'
'documentation' = 'https://github.com/asdf-format/sphinx-asdf'
'repository' = 'https://github.com/asdf-format/sphinx-asdf'

[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sphinx_asdf/_version.py"

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
