[metadata]
name = sphinx-asdf
package_name = sphinx-asdf
provides = sphinx_asdf
author = Daniel D'Avella
license = BSD-3-Clause
license_file = LICENSE
description = Sphinx plugin for generating documentation from ASDF schemas
long_description = file: README.rst
url = https://github.com/spacetelescope/sphinx-asdf
github_project = spacetelescope/sphinx-asdf

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
setup_requires = setuptools_scm
install_requires =
    pyyaml
    mistune~=0.8.4
    sphinx
    sphinx_bootstrap_theme

[options.extras_require]
tests =
    pytest

[flake8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = static,templates

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
